css tweaks for overflow issue

--- a/src/SubjectControls/_mixins.scss
+++ b/src/SubjectControls/_mixins.scss
@@ -14,7 +14,6 @@
   display: flex;
   flex-flow: row;
   line-height: normal;
-  overflow: hidden;
   position: relative;
   
   .button {
